# Epitech-Plazza

./: .gitignore  CMakeLists.txt  Makefile  setup.py
.github/workflows/: workflow.yml
include/: ConditionalVariable.hpp  CookPool.hpp  Kitchen.hpp  ProcessForker.hpp  Reception.hpp  Semaphore.hpp
include/ipc/: InterProcessCom.hpp  PizzaIPC.hpp
include/logging/: CliLogger.hpp  ILogger.hpp
include/pizza/: ParsePizza.hpp  Pizza.hpp  PizzaEncoder.hpp  PizzaFactory.hpp  PizzaQueue.hpp
src/: CookPool.cpp  Kitchen.cpp  ParsePizza.cpp  ParsePizza.hpp  Reception.cpp  Semaphore.cpp  main.cpp
src/ipc/: InterProcessCom.cpp  PizzaIPC.cpp
src/logging/: CliLogger.cpp  ILogger.cpp
src/pizza/: Pizza.cpp  PizzaEncoder.cpp  PizzaFactory.cpp  PizzaQueue.cpp
tests/: Makefile  Test_CliLogger.cpp  Test_CookPool.cpp  Test_IPC.cpp  Test_Kitchen.cpp  Test_Pizza.cpp  Test_PizzaFactory.cpp  Test_PizzaQueue.cpp  Test_Reception.cpp  Test_Semaphore.cpp  Test_pizzaEncoder.cpp  Test_pizzaIPC.cpp  Test_processForker.cpp
tests/tests.dSYM/Contents/Resources/DWARF/: tests
